<resources>
    <string name="app_name">Gestor de Reclamos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_userNama">User</string>
    <string name="ingresar">INGRESAR</string>
    <string name="bienvenido_2">Vamos a pedirte unos datos mas para completar el registro.</string>
    <string name="bienvenido_1">BIENVENIDO</string>
    <string name="datos_1">Datos Personales</string>
    <string name="nombres">Nombre/s</string>
    <string name="apellidos">Apellido/s</string>
    <string name="celular">Celular</string>
    <string name="prompt_userName">User</string>
    <string name="dni_Tipo">Tipo</string>
    <string name="dni_Num">DNI</string>
    <string name="test1">TestApp 1</string>
    <string name="test2">TestApp 2</string>
    <string name="sexo">Sexo</string>
    <string name="pregunta">Pregunta</string>
    <string name="respuesta">Respuesta</string>
    <string name="pregunta_Tipo">Ingrese una respuesta</string>
    <string name="password">Password</string>
    <string name="password_2">Password V.</string>
    <string name="datos4">Confirmación de Datos Personales</string>
    <string name="olvido_Password">¿Ha olvidado la contraseña?</string>
    <string name="recupera_1">Recuperación de contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="validar_Usuario">Validar Usuario</string>
    <string name="recupera_2">Cambios de Contraseña</string>
    <string name="password_2Texto">Password Validación</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_pantalla_principal">Pantalla Principal</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_open">Menu Open</string>
    <string name="navigation_close">Menu Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="principaltexto1">GESTOR DE RECLAMOS App.</string>
    <string name="principaltexto2">Ultimos Reclamos Activos :</string>
    <string name="reclamo_1">Ejemplo del  1º Reclamo listado</string>
    <string name="reclamo_2">Ejemplo del  2º Reclamo listado</string>
    <string name="reclamo_3">Ejemplo del  3º Reclamo listado</string>
    <string name="reclamo_4">Ejemplo del  4º Reclamo listado</string>
    <string name="reclamo_5">Ejemplo del  5º Reclamo listado</string>
    <string name="reclamonuevo">Nuevo Reclamo</string>
    <string name="reclamoactivo">Reclamos Activos</string>
    <string name="reclamohistorial">Historial Reclamos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="numero">Número</string>
    <string name="numerodoc">Número de Documento</string>
    <string name="infoaplicacion_1">Acerca de la App</string>
    <string name="infoaplicacion_2">GRUPO Nº 6</string>
    <string name="infoaplicacion_3"><b>MATERIA :</b> APLICACIONES DISTRIBUIDAS\n\n<b>NOMBRE App :</b> GESTOR DE RECLAMOS\n\n<b>INTEGRANTES :</b></string>
    <string name="infoaplicacion_4">\tLU: 1105.567\t\tGADDA, Rodrigo Emanuel</string>
    <string name="infoaplicacion_5">\tLU: 99.514\t\tGIMENEZ, Alejandro Gaston</string>
    <string name="infoaplicacion_6">\tLU: 110.475\t\tTISSERA, Rodrigo Ezequiel</string>
    <string name="configuraciones_1">Configuraciones</string>
    <string name="uso_movil">Permitir Uso de Datos Móviles (Puede haber datos extra por parte de la compañía)</string>
    <string name="uso_notificaciones">Recibir Notificaciones</string>
    <string name="nreclamo1">Nuevo Reclamo</string>
    <string name="nreclamo2_texto1">\nReclamo Número XXX\nSobre Edificio X\nEspacio/Unidad X\nDueño/Inquilino</string>
    <string name="nreclamo2_texto2">Detalles del Reclamo</string>
    <string name="detalle_usuario">\nNombre: XXX\nApellido: XXX\nDNI: 1234\nDueño/Inquilino</string>
    <string name="especialidad">Especialidad</string>
</resources>