<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".principal.activity_principal">


    <ImageView
        android:id="@+id/principal_img"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/principaltexto1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_gray"
        android:gravity="center"
        android:text="@string/principaltexto1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/principal_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/image20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principaltexto1" />

    <TextView
        android:id="@+id/principaltexto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_gray"
        android:text="@string/principaltexto2"
        android:padding="6dip"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principal_img2" />

    <ScrollView
        android:id="@+id/listareclamos"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:scrollbarSize="8dp"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/principaltexto2">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_vertical|center_horizontal">
            <Button
                android:id="@+id/reclamo_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reclamo_1"
                android:textAlignment="viewStart">
            </Button>
            <Button
                android:id="@+id/reclamo_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reclamo_2"
                android:textAlignment="viewStart">
            </Button>
            <Button
                android:id="@+id/reclamo_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reclamo_3"
                android:textAlignment="viewStart">
            </Button>
            <Button
                android:id="@+id/reclamo_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reclamo_4"
                android:textAlignment="viewStart">
            </Button>
            <Button
                android:id="@+id/reclamo_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/reclamo_5"
                android:textAlignment="viewStart">
            </Button>
    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/reclamonuevo"
        android:layout_width="193dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/image22"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="reclamonuevo"
        android:text="@string/reclamonuevo"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listareclamos" />

    <Button
        android:id="@+id/reclamoactivo"
        android:layout_width="193dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/image23"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="reclamoactivo"
        android:text="@string/reclamoactivo"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listareclamos" />

    <Button
        android:id="@+id/reclamohistorial"
        android:layout_width="193dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/image24"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="reclamohistorial"
        android:text="@string/reclamohistorial"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reclamonuevo" />

    <Button
        android:id="@+id/notificaciones"
        android:layout_width="192dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/image25"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="notificaciones"
        android:text="@string/notificaciones"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reclamoactivo" />

</androidx.constraintlayout.widget.ConstraintLayout>