<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".infoaplicacion.activity_infoaplicacion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppTheme.Toolbar"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/infoaplicacion_img"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image07"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoaplicacion_1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_gray"
        android:gravity="center"
        android:text="@string/infoaplicacion_1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/infoaplicacion_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/image29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoaplicacion_1" />

    <LinearLayout
        android:id="@+id/infoaplicacion"
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoaplicacion_img2">
        <TextView
            android:id="@+id/infoaplicacion_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoaplicacion_2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/infoaplicacion_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoaplicacion_3"
            android:padding="6dip"
            android:textColor="#000000">
        </TextView>
        <TextView
            android:id="@+id/infoaplicacion_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/image_rodrigo_gadda"
            android:text="@string/infoaplicacion_4"
            android:padding="6dip"
            android:textColor="#000000">
        </TextView>
        <TextView
            android:id="@+id/infoaplicacion_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/image_alejandro_gimenez"
            android:text="@string/infoaplicacion_5"
            android:padding="6dip"
            android:textColor="#000000">
        </TextView>
        <TextView
            android:id="@+id/infoaplicacion_6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/image_rodrigo_tissera"
            android:text="@string/infoaplicacion_6"
            android:padding="6dip"
            android:textColor="#000000">
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/exit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="4dp"
        android:onClick="exit"
        android:src="@drawable/image04"
        app:layout_constraintBottom_toBottomOf="@+id/infoaplicacion_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_menu"
        android:background="@drawable/side_nav_bar" />

</androidx.drawerlayout.widget.DrawerLayout>